# weditor

./: CMakeLists.txt  README.md  build.py  compile.bat
include/: yocto_math.h
include/YOCTO/: yocto_bvh.h
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
source/: editor.cpp  editor.h
src/: editor.cpp  editor.h  raytrace.h
